--- a/frontend/src/app/locales/en.json
+++ b/frontend/src/app/locales/en.json
@@ -71,11 +71,160 @@
     "subtitle": "Explore different career paths and discover your potential. See real success stories and find your perfect career trajectory.",
     "choosePath": "Choose Your Path",
     "successStories": "Success Stories",
+    "growth": "growth",
+    "roadmap": "Roadmap",
+    "keySkills": "Key Skills Required",
     "cta": {
       "title": "Ready to Start Your Journey?",
       "description": "Join our community and get personalized guidance for your chosen career path.",
       "getStarted": "Start Your Path",
       "learnMore": "Explore More"
+    },
+    "paths": {
+      "finance": {
+        "title": "Finance & Banking",
+        "description": "Investment banking, corporate finance, risk management",
+        "skills": ["Financial Modeling", "Excel", "SQL", "Python", "CFA"],
+        "salary": "$85K - $150K",
+        "roadmap": [
+          {
+            "level": "Foundations",
+            "description": "Accounting basics, time value of money, Excel fundamentals and corporate finance principles."
+          },
+          {
+            "level": "Financial Modeling",
+            "description": "Build DCF, LBO and merger models in Excel; learn sensitivity and scenario analysis."
+          },
+          {
+            "level": "Analytics & Tools",
+            "description": "Use SQL/Python for data analysis; become proficient with Bloomberg/Refinitiv terminals."
+          },
+          {
+            "level": "Transaction Experience",
+            "description": "Work on M&A, capital markets, due diligence and prepare client-facing materials."
+          },
+          {
+            "level": "Specialization & Credentials",
+            "description": "Pursue CFA/FRM or MBA depending on track; specialize in sectors like PE, asset management or corporate finance."
+          },
+          {
+            "level": "Senior Practitioner",
+            "description": "Lead deal teams, manage client relationships and take ownership of financial strategy."
+          },
+          {
+            "level": "Leadership",
+            "description": "Shape firm strategy, mentor senior staff and drive business development initiatives."
+          }
+        ]
+      },
+      "consulting": {
+        "title": "Management Consulting",
+        "description": "Strategy consulting, operations, business transformation",
+        "skills": ["Problem Solving", "PowerPoint", "Data Analysis", "Leadership", "MBA"],
+        "salary": "$90K - $180K",
+        "roadmap": [
+          {
+            "level": "Foundations",
+            "description": "Develop structured problem solving, quantitative reasoning and case interview basics."
+          },
+          {
+            "level": "Analytical Toolkit",
+            "description": "Master Excel modeling, basic SQL and data visualization for client deliverables."
+          },
+          {
+            "level": "Client Execution",
+            "description": "Participate in workstreams: market sizing, process mapping, KPI definition and stakeholder workshops."
+          },
+          {
+            "level": "Specialization",
+            "description": "Choose industry or function focus (strategy, operations, digital) and deepen domain knowledge."
+          },
+          {
+            "level": "Consulting Skills",
+            "description": "Lead project modules, manage junior consultants and deliver executive presentations."
+          },
+          {
+            "level": "Network & Credentials",
+            "description": "Grow professional network, consider MBA or advanced credentials for acceleration."
+          },
+          {
+            "level": "Partner/Leadership",
+            "description": "Drive client portfolio, win new business and build firm-level capabilities."
+          }
+        ]
+      },
+      "tech": {
+        "title": "Software Engineering Roles",
+        "description": "Software engineering, Product management, Data science",
+        "skills": ["Programming", "Cloud Computing", "Database Design", "AI/ML", "Data Structure & Algorithms", "System Design"],
+        "salary": "$95K - $200K",
+        "roadmap": [
+          {
+            "level": "Foundations",
+            "description": "Learn programming fundamentals; focus on one language, data structures, algorithms and Git basics."
+          },
+          {
+            "level": "Frontend Development",
+            "description": "Master HTML/CSS/JS and frameworks like React or Next.js; build interactive UIs."
+          },
+          {
+            "level": "Backend Development",
+            "description": "Build REST/GraphQL APIs, work with SQL/NoSQL databases and implement auth patterns."
+          },
+          {
+            "level": "Full Stack Projects",
+            "description": "Ship end-to-end apps, deploy to platforms (Vercel, Render) and add tests and CI workflows."
+          },
+          {
+            "level": "DevOps & Cloud",
+            "description": "Learn Docker, CI/CD (GitHub Actions), cloud fundamentals on AWS/GCP/Azure and monitoring."
+          },
+          {
+            "level": "Advanced Engineering",
+            "description": "Master system design, microservices, caching strategies and performance optimization."
+          },
+          {
+            "level": "Tech Leadership",
+            "description": "Lead architecture, mentor teams and influence product and engineering strategy."
+          }
+        ]
+      },
+      "marketing": {
+        "title": "Marketing & Growth",
+        "description": "Digital marketing, brand management, growth hacking",
+        "skills": ["Analytics", "SEO/SEM", "Social Media", "Content Strategy", "A/B Testing"],
+        "salary": "$70K - $130K",
+        "roadmap": [
+          {
+            "level": "Foundations",
+            "description": "Understand marketing fundamentals: customer funnels, positioning, segmentation and basic analytics."
+          },
+          {
+            "level": "Digital Basics",
+            "description": "Learn SEO fundamentals, Google Analytics, tag management and basic HTML for marketers."
+          },
+          {
+            "level": "Acquisition Channels",
+            "description": "Run paid acquisition (Google Ads, Meta), set up tracking and optimize cost-per-acquisition."
+          },
+          {
+            "level": "Growth Experiments",
+            "description": "Design A/B tests, improve conversion rates and build retention loops using product analytics."
+          },
+          {
+            "level": "Content & Brand",
+            "description": "Develop content strategy, social media playbooks and long-term brand positioning."
+          },
+          {
+            "level": "Advanced Measurement",
+            "description": "Use SQL, BI tools and attribution modeling to guide channel investment decisions."
+          },
+          {
+            "level": "Marketing Leadership",
+            "description": "Lead growth teams, define GTM strategy and align marketing with product and sales goals."
+          }
+        ]
+      }
     }
   },
   "footer": {
@@ -251,7 +400,39 @@
     "nonprofit": "VNPN is a non-profit project, implemented with support from the Association of Vietnamese Youth and Students in the United States (",
     "sinhvien": "www.sinhvienusa.org",
     "vietchallenge": ") and the VietChallenge startup competition (",
-    "betaNote": "). The project is currently being tested in the Beta phase."
+    "betaNote": "). The project is currently being tested in the Beta phase.",
+    "teamTitle": "Our Team",
+    "viewLinkedIn": "View LinkedIn Profile",
+    "teamMembers": {
+      "quang": {
+        "name": "Quang Nguyen",
+        "role": "Head Mentor",
+        "description": [
+          "Quang Nguyen is currently a Software Engineer at Microsoft. He previously interned as a software engineer at NVIDIA (Summer 2023) and Facebook (Summer 2022).",
+          "He received a full-ride scholarship worth $73,000/year for 4 years at Rice University, majoring in Computer Science.",
+          "As the President of Rice Apps (Rice Software Engineering Club) at Rice University, he has mentored and taught over 60 members about professional web and mobile application development."
+        ]
+      },
+      "tri": {
+        "name": "Tri Bui",
+        "role": "Mentor",
+        "description": [
+          "Tri Bui currently works in Risk Management at Revantage, a Blackstone portfolio company, and has interned as a Software Engineer at Daikin, DetectAuto, and Deloitte Vietnam.",
+          "Founder/CEO of Esmart Solutions, a company providing communication and technology solutions to small and medium-sized businesses in Vietnam.",
+          "President of the Entrepreneurship and Investment Clubs at Macalester College. He has won multiple awards in technology, finance, and entrepreneurship, with a total value exceeding $15,000."
+        ]
+      },
+      "anh": {
+        "name": "Anh Ngo",
+        "role": "Advisor",
+        "description": [
+          "Anh Ngo is currently an Investment Banking Analyst at Deutsche Bank.",
+          "She received a scholarship to study Economics at the University of Pennsylvania (UPenn).",
+          "Vice President of the Wharton Finance Club and a member of the International Student Advisory Board at UPenn.",
+          "She has extensive experience working at UPenn Career Services, where she has assisted over 200 students with resume reviews and career guidance."
+        ]
+      }
+    }
   }
 }
   
