translation of about page and fix the scr0ll in chatroom

--- a/frontend/src/app/locales/en.json
+++ b/frontend/src/app/locales/en.json
@@ -35,8 +35,8 @@
   },
   "community": {
     "title": "CF Hub Community",
-    "groupTech": "Group TECH",
-    "instagramTech": "Instagram TECH"
+    "groupTech": "Page Facebook",
+    "instagramTech": "Page Instagram"
   },
   "JobAppTip": {
     "title": "Job Application Tips",
