--- a/frontend/src/app/locales/vi.json
+++ b/frontend/src/app/locales/vi.json
@@ -34,8 +34,8 @@
   },
   "community": {
     "title": "Cộng đồng CF Hub",
-    "groupTech": "Nhóm TECH",
-    "instagramTech": "Instagram TECH"
+    "groupTech": "Trang Facebook",
+    "instagramTech": "Trang Instagram"
   },
   "JobAppTip": {
     "title": "Mẹo Ứng Tuyển Việc Làm",
